# hft-itch-parser

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  main.cpp
inc/filesystem/: file.h
inc/itch/: itch_parser.cpp  itch_parser.h
inc/utils/: endian.h  endian.inl  writechar.h
